# tddcliii

./: .clang_complete  .gitmodules  CMakeLists.txt  common.h  default-config.h  extension.c  extension.h  interface.c  interface.h  json-tg.c  json-tg.h  loop.c  loop.h  lua-tg.c  lua-tg.h  main.c  td-curses-utils.cpp  td-curses-utils.hpp  td-line-edit.cpp  td-line-edit.hpp  td-window-chat.cpp  td-window-chat.hpp  td-window-dialogs.cpp  td-window-dialogs.hpp  td-window-input.cpp  td-window-input.hpp  td-window-log.cpp  td-window-log.hpp  td-window-root.cpp  td-window-root.hpp  td-window.cpp  td-window.hpp  telegram-curses.cpp  telegram-curses.hpp  telegram-layout.h  telegram.h
CMake/: FindLibConfig.cmake  FindLibEdit.cmake  FindLibEvent1.cmake  FindLibEvent2.cmake  FindLibJansson.cmake
libedit/: config.h  history.c  readline.c  terminal.c
